# PSK_LD

./: CMakeLists.txt  ex  metrics.json
application/: bazine.h  kompiuteris.h  main.cpp  main.h  zaidejas.h
application/game/: main_game.cpp  main_game.h
application/game/players/: player_blueprint.cpp  player_blueprint.h
application/game/players/computer/: computer.cpp  computer.h
application/game/players/user/: user.cpp  user.h
application/ui/: console_display.cpp  console_display.h
